Fixed missing babel dependency

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Adam Schwalm <adamschwalm@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "babel-preset-es2015": "^6.13.2",
     "material-ui": "^0.15.4",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
