--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "react-develop": "^0.1.5",
     "watchify": "^0.6.1"
   },
+  "babel": {
+    "plugins": ["transform-es2015-computed-properties"],
+    "presets": ["es2015", "react"]
+  },
   "scripts": {
     "watch": "./scripts/watch.sh",
     "build": "./scripts/build.sh"
@@ -21,6 +25,7 @@
   "author": "Adam Schwalm <adamschwalm@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "babel-plugin-transform-es2015-computed-properties": "^6.8.0",
     "babel-preset-es2015": "^6.13.2",
     "material-ui": "^0.15.4",
     "react": "^15.3.0",
