--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "watchify": "^0.6.1"
   },
   "babel": {
-    "plugins": ["transform-es2015-computed-properties"],
-    "presets": ["es2015", "react"]
+    "plugins": [
+      "transform-es2015-computed-properties"
+    ],
+    "presets": [
+      "es2015",
+      "react"
+    ]
   },
   "scripts": {
     "watch": "./scripts/watch.sh",
@@ -27,6 +32,7 @@
   "dependencies": {
     "babel-plugin-transform-es2015-computed-properties": "^6.8.0",
     "babel-preset-es2015": "^6.13.2",
+    "hi-base32": "^0.1.1",
     "material-ui": "^0.15.4",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
