--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-plugin-transform-es2015-computed-properties": "^6.8.0",
     "babel-preset-es2015": "^6.13.2",
     "hi-base32": "^0.1.1",
+    "jquery": "^3.1.0",
     "material-ui": "^0.15.4",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
