--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "babel-plugin-transform-es2015-computed-properties": "^6.8.0",
     "babel-preset-es2015": "^6.13.2",
+    "base64-js": "^1.1.2",
     "hi-base32": "^0.1.1",
     "jquery": "^3.1.0",
     "material-ui": "^0.15.4",
