--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
     "browserify": "^13.0.0",
@@ -11,9 +12,17 @@
   },
   "babel": {
     "plugins": [
-      "transform-es2015-computed-properties"
+      "transform-es2015-computed-properties",
+      [
+        "transform-runtime",
+        {
+          "polyfill": false,
+          "regenerator": true
+        }
+      ]
     ],
     "presets": [
+      "es2017",
       "es2015",
       "react"
     ]
@@ -32,8 +41,9 @@
   "dependencies": {
     "babel-plugin-transform-es2015-computed-properties": "^6.8.0",
     "babel-preset-es2015": "^6.13.2",
+    "babel-preset-es2017": "^6.14.0",
+    "babel-runtime": "^6.11.6",
     "base64-js": "^1.1.2",
-    "hi-base32": "^0.1.1",
     "jquery": "^3.1.0",
     "material-ui": "^0.15.4",
     "react": "^15.3.0",
