--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "material-ui": "^0.15.4",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
-    "react-tap-event-plugin": "^1.0.0"
+    "react-tap-event-plugin": "^1.0.0",
+    "superagent": "^2.3.0",
+    "superagent-promise": "^1.1.0"
   }
 }
