--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "babel-preset-es2017": "^6.14.0",
     "babel-runtime": "^6.11.6",
     "base64-js": "^1.1.2",
+    "chrome-promise": "^2.0.1",
     "jquery": "^3.1.0",
     "material-ui": "^0.15.4",
     "react": "^15.3.0",
