--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
     "browserify": "^13.0.0",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
     "mocha": "^3.1.2",
     "react-develop": "^0.1.5",
     "watchify": "^0.6.1"
